--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "polished": "^3.6.7",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.1.1",
     "@types/styled-components": "^5.1.3"
   }
 }
